@@ -2,6 +2,14 @@ def alias_check(groupchat):
  if not ALIASES.has_key(groupchat):
   alias_load(groupchat)
 
+def alias_load(groupchat):
+ try: ALIASES[groupchat] = options.list2dict(options.optstringlist('aliases')[groupchat])
+ except: ALIASES[groupchat] = {}
+
+def alias_dump(groupchat):
+ options.optstringlist('aliases')[groupchat] = options.dict2list(ALIASES.get(groupchat, {}))
+ #print 'alias_dump'
+
 def alias_get(groupchat, alias):
  alias_check(groupchat)
  return ALIASES[groupchat].get(alias)
@@ -20,4 +28,3 @@ def alias_clear(groupchat):
  alias_check(groupchat)
  ALIASES[groupchat].clear()
  alias_dump(groupchat)
- 
